--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "framer-motion": "^12.9.2",
     "lucide-react": "^0.503.0",
     "motion": "^12.9.2",
-    "next": "15.3.1",
+    "next": "^15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "uuid": "^11.1.0"
